# Point-Cloud-real-time-compression-Using-ZFP-and-JPEG-

./: LICENSE  README.md
socket_client/: CMakeLists.txt  jpegcompression.h  main.cpp  zfpcompression.h
socket_server/: CMakeLists.txt  MySimpleOpenNIViewer.h  jpegcompression.h  main.cpp  pclcomression.h  quality_metrics.h  utils.h  zfpcompression.h
